--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 		<link href="css/responsive.css" rel="stylesheet"/>
 		<link href="css/style.css" rel="stylesheet"/>
 		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -42,7 +41,7 @@
 			<div class="navbar navbar-default navbar-fixed-top menu-top">
 				<div class="container">
 					<div class="logo">
-						<a href="index.html" class="navbar-brand"><p>Bhoopendra</p></a>
+						<a href="index.html" class="navbar-brand"><p>Portfolio</p></a>
 						<div class="mobile-nav"></div>
 					</div>
 					
@@ -92,7 +91,7 @@
 						</div>
 						<div class="col-md-6 col-sm-12 col-xs-12">
 						   <div class="image-container">
-							<img src="Images/d1.jpg" alt="About Image">
+							<img src="Images/d7.jpg" alt="About Image">
 						   </div>
 					    </div>
 				    </div>
@@ -310,7 +309,7 @@
 								<div class="item-img-overlay">
 									<a href="https://github.com/bhoopendra116/Codsoft-internship.git"><i class='bx bx-link-external' style="color: skyblue;"></i></a>
 									<div class="overlay-info full-width">																						
-										<a href="images/d2.jpg" data-lightbox="images">
+										<a href="images/d5.jpg" data-lightbox="images">
 											<span class="icon"><i class="fa fa-plus"></i></span>
 										</a>
 										<h4>password Generator</h4>
@@ -340,7 +339,7 @@
 								<div class="item-img-overlay">
 									<a href="https://github.com/bhoopendra116/creditcard-validator"><i class='bx bx-link-external' style="color: skyblue;"></i></a>
 									<div class="overlay-info full-width">																						
-										<a href="images/d5.jpg" data-lightbox="images">
+										<a href="images/d3.jpg" data-lightbox="images">
 											<span class="icon"><i class="fa fa-plus"></i></span>
 										</a>
 										<h4>Credit Card Validator</h4>
